# DAS_pro

./: .gitignore  Doc.7z  ETH-5520-DAS.rar  README.md  build_exe.bat  das_pro.spec  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml
docs/: 使用手册.md
src/das_pro/: __init__.py  app.py
src/das_pro/device/: __init__.py  client.py  simulator.py
src/das_pro/dsp/: __init__.py  detect.py  spectrum.py
src/das_pro/gui/: __init__.py  dialogs.py  main_window.py  monitor_window.py  params.py  plotutil.py  region_window.py  worker.py
src/das_pro/protocol/: __init__.py  commands.py  constants.py  frames.py
tests/: test_detect.py  test_protocol.py
