[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "das_pro"
version = "0.1.0"
description = "Modern host application for the ETH-5520 DAS demodulation board"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
]

[project.scripts]
das-pro = "das_pro.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
